// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component renders a Switch in "on" state 1`] = `
@media  {
  .c-invHbC {
    background-color: white;
    border-radius: var(--radii-round);
    display: block;
    transition: transform 50ms;
    will-change: transform;
  }

  .c-bWJMkk {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--colors-tonal200);
    border: none;
    border-radius: var(--radii-round);
    cursor: pointer;
    display: flex;
    overflow: hidden;
    position: relative;
    transition: all 50ms ease-out;
  }

  .c-bWJMkk:hover {
    background-color: var(--colors-tonal300);
  }

  .c-bWJMkk:focus {
    outline: 2px solid var(--colors-primary);
    outline-offset: 1px;
  }

  .c-bWJMkk[data-state="checked"] {
    background-color: var(--colors-primary);
  }

  .c-bWJMkk[data-state="checked"]:hover {
    background-color: var(--colors-primaryMid);
  }

  .c-bWJMkk[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-invHbC-hjcbRK-size-md {
    height: var(--sizes-1);
    width: var(--sizes-1);
  }

  .c-invHbC-hjcbRK-size-md[data-state="checked"] {
    transform: translateX(calc(var(--sizes-2) - var(--space-1)));
  }

  .c-bWJMkk-dYgJcL-size-md {
    padding: var(--space-0);
    width: var(--sizes-4);
  }
}

<div>
  <button
    aria-checked="true"
    class="c-bWJMkk c-bWJMkk-dYgJcL-size-md"
    data-state="checked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-invHbC c-invHbC-hjcbRK-size-md"
      data-state="checked"
    />
  </button>
</div>
`;

exports[`Switch component renders a disabled switch 1`] = `
@media  {
  .c-invHbC {
    background-color: white;
    border-radius: var(--radii-round);
    display: block;
    transition: transform 50ms;
    will-change: transform;
  }

  .c-bWJMkk {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--colors-tonal200);
    border: none;
    border-radius: var(--radii-round);
    cursor: pointer;
    display: flex;
    overflow: hidden;
    position: relative;
    transition: all 50ms ease-out;
  }

  .c-bWJMkk:hover {
    background-color: var(--colors-tonal300);
  }

  .c-bWJMkk:focus {
    outline: 2px solid var(--colors-primary);
    outline-offset: 1px;
  }

  .c-bWJMkk[data-state="checked"] {
    background-color: var(--colors-primary);
  }

  .c-bWJMkk[data-state="checked"]:hover {
    background-color: var(--colors-primaryMid);
  }

  .c-bWJMkk[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-invHbC-hjcbRK-size-md {
    height: var(--sizes-1);
    width: var(--sizes-1);
  }

  .c-invHbC-hjcbRK-size-md[data-state="checked"] {
    transform: translateX(calc(var(--sizes-2) - var(--space-1)));
  }

  .c-bWJMkk-dYgJcL-size-md {
    padding: var(--space-0);
    width: var(--sizes-4);
  }
}

<div>
  <button
    aria-checked="false"
    class="c-bWJMkk c-bWJMkk-dYgJcL-size-md"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-invHbC c-invHbC-hjcbRK-size-md"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`Switch component renders a large switch 1`] = `
@media  {
  .c-invHbC {
    background-color: white;
    border-radius: var(--radii-round);
    display: block;
    transition: transform 50ms;
    will-change: transform;
  }

  .c-bWJMkk {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--colors-tonal200);
    border: none;
    border-radius: var(--radii-round);
    cursor: pointer;
    display: flex;
    overflow: hidden;
    position: relative;
    transition: all 50ms ease-out;
  }

  .c-bWJMkk:hover {
    background-color: var(--colors-tonal300);
  }

  .c-bWJMkk:focus {
    outline: 2px solid var(--colors-primary);
    outline-offset: 1px;
  }

  .c-bWJMkk[data-state="checked"] {
    background-color: var(--colors-primary);
  }

  .c-bWJMkk[data-state="checked"]:hover {
    background-color: var(--colors-primaryMid);
  }

  .c-bWJMkk[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-invHbC-hjcbRK-size-md {
    height: var(--sizes-1);
    width: var(--sizes-1);
  }

  .c-invHbC-hjcbRK-size-md[data-state="checked"] {
    transform: translateX(calc(var(--sizes-2) - var(--space-1)));
  }

  .c-bWJMkk-dYgJcL-size-md {
    padding: var(--space-0);
    width: var(--sizes-4);
  }

  .c-invHbC-jjpZVw-size-lg {
    height: var(--sizes-2);
    width: var(--sizes-2);
  }

  .c-invHbC-jjpZVw-size-lg[data-state="checked"] {
    transform: translateX(var(--space-5));
  }

  .c-bWJMkk-fhqySU-size-lg {
    padding: var(--space-1);
    width: var(--sizes-6);
  }
}

<div>
  <button
    aria-checked="false"
    class="c-bWJMkk c-bWJMkk-fhqySU-size-lg"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-invHbC c-invHbC-jjpZVw-size-lg"
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`Switch component renders a switch 1`] = `
@media  {
  .c-invHbC {
    background-color: white;
    border-radius: var(--radii-round);
    display: block;
    transition: transform 50ms;
    will-change: transform;
  }

  .c-bWJMkk {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--colors-tonal200);
    border: none;
    border-radius: var(--radii-round);
    cursor: pointer;
    display: flex;
    overflow: hidden;
    position: relative;
    transition: all 50ms ease-out;
  }

  .c-bWJMkk:hover {
    background-color: var(--colors-tonal300);
  }

  .c-bWJMkk:focus {
    outline: 2px solid var(--colors-primary);
    outline-offset: 1px;
  }

  .c-bWJMkk[data-state="checked"] {
    background-color: var(--colors-primary);
  }

  .c-bWJMkk[data-state="checked"]:hover {
    background-color: var(--colors-primaryMid);
  }

  .c-bWJMkk[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-invHbC-hjcbRK-size-md {
    height: var(--sizes-1);
    width: var(--sizes-1);
  }

  .c-invHbC-hjcbRK-size-md[data-state="checked"] {
    transform: translateX(calc(var(--sizes-2) - var(--space-1)));
  }

  .c-bWJMkk-dYgJcL-size-md {
    padding: var(--space-0);
    width: var(--sizes-4);
  }
}

<div>
  <button
    aria-checked="false"
    class="c-bWJMkk c-bWJMkk-dYgJcL-size-md"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-invHbC c-invHbC-hjcbRK-size-md"
      data-state="unchecked"
    />
  </button>
</div>
`;
